changed color to green, added dependency array

--- a/src/components/Design.css
+++ b/src/components/Design.css
@@ -83,7 +83,7 @@
   color: #ff0000;
 }
 .addUser {
-  background-color: #ff0000 !important;
+  background-color: green !important;
   font-weight: bold !important;
   text-decoration: none;
   color: black !important;
